# prefire

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  ROADMAP.md
config/: registry.json  test_signatures.json
crates/alerts/: Cargo.toml
crates/alerts/src/: discord.rs  lib.rs  telegram.rs  webhook.rs
crates/enrichment/: Cargo.toml
crates/enrichment/src/: lib.rs  multisig.rs  nonce.rs  snapshot.rs  token.rs
crates/monitor/: Cargo.toml
crates/monitor/src/: governance.rs  lib.rs  log_parser.rs  replay.rs  rpc.rs
crates/scoring/: Cargo.toml
crates/scoring/src/: lib.rs
src/: main.rs
static/: dashboard.html
