[workspace]
members = ["crates/*"]
resolver = "2"

[package]
name = "prefire"
version = "0.1.0"
edition = "2021"
description = "Solana governance attack detection — passive, permissionless, real-time"

[dependencies]
prefire-monitor = { path = "crates/monitor" }
prefire-enrichment = { path = "crates/enrichment" }
prefire-scoring = { path = "crates/scoring" }
prefire-alerts = { path = "crates/alerts" }
tokio = { version = "1", features = ["full"] }
solana-client = "2"
solana-sdk = "2"
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
