[package]
name = "prefire-scoring"
version = "0.1.0"
edition = "2021"
description = "Stage 3: Signal combination + threat scoring"

[dependencies]
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prefire-enrichment = { path = "../enrichment" }
prefire-monitor = { path = "../monitor" }
solana-sdk = "2"
